# compact-analyzer

./: Cargo.toml  README.md  dist-workspace.toml
.claude/: compact-check.json
.github/workflows/: ci.yml  extension-release.yml
.superpowers/milestones/: README.md  m2b-cross-file-and-workspace.md  m3-completion-and-cst-features.md  m4-toolchain-integration.md  m5-vscode-extension-and-distribution.md  m6-upstream-automation.md  v2-native-type-checking.md  v3-disclosure-analysis.md
crates/analyzer-core/: Cargo.toml
crates/analyzer-core/assets/: ledger_adts_0_23.json  std_0_23.compact
crates/analyzer-core/src/: analysis.rs  db.rs  fixture.rs  infer.rs  item_tree.rs  ledger_adts.rs  lib.rs  line_index.rs  resolve.rs  source_path.rs  stdlib.rs  ty.rs  vfs.rs  workspace.rs
crates/analyzer-core/src/disclosure/: abs.rs  interp.rs  leaks.rs  mod.rs  tables.rs  version.rs
crates/analyzer-ide/: Cargo.toml
crates/analyzer-ide/src/: completion.rs  document_symbols.rs  folding_ranges.rs  goto_definition.rs  hover.rs  inlay_hints.rs  lib.rs  references.rs  rename.rs  selection_ranges.rs  semantic_tokens.rs  signature_help.rs  workspace_symbols.rs
crates/analyzer-toolchain/: Cargo.toml
crates/analyzer-toolchain/src/: compile.rs  differential.rs  discovery.rs  format.rs  lib.rs  locate.rs  parse.rs  process.rs
crates/analyzer-toolchain/tests/: robustness.rs
crates/compact-analyzer/: Cargo.toml
crates/compact-analyzer/src/: code_action.rs  lsp_utils.rs  main.rs  semantic_tokens_legend.rs  server.rs
crates/compact-analyzer/tests/: corpus_smoke.rs  disclosure_differential.rs  lsp_completion.rs  lsp_integration.rs  lsp_navigation.rs  lsp_semantic_tokens.rs  lsp_structure.rs  lsp_toolchain.rs  lsp_workspace.rs  type_differential.rs
crates/compact-analyzer/tests/fixtures/disclosure/: comingled_return.compact  commit_hides_ok.compact  constructor_arg_leak.compact  container_op_leak.compact  fold_disclose_ok.compact  hash_then_leak.compact  implicit_flow_disclosed.compact  implicit_flow_leak.compact  interproc_call_leak.compact  interproc_call_ok.compact  interproc_path.compact  ledger_disclosed.compact  ledger_leak.compact  map_disclose_ok.compact  module_call_leak.compact  module_circuit_leak.compact  module_reexport_ok.compact  return_arg_ok.compact  return_witness_leak.compact  stdlib_evolvenonce_disclosed.compact  stdlib_evolvenonce_leak.compact  stdlib_recvunshielded_leak.compact  stdlib_recvunshielded_ok.compact  stdlib_some_disclosed.compact  stdlib_some_leak.compact  stdlib_tokentype_ok.compact  struct_field_projection_ok.compact  struct_field_projection_out_of_order_ok.compact
crates/compact-analyzer/tests/fixtures/disclosure/crossfile_call_leak/: libB.compact  main.compact
crates/compact-analyzer/tests/fixtures/disclosure/crossfile_call_ok/: main.compact
crates/compact-analyzer/tests/fixtures/type/: bool_return_mismatch.compact  bool_return_ok.compact  boolean_into_uint.compact  bytes_return_ok.compact  bytes_return_size_mismatch.compact  cast_bytes_into_field_ok.compact  cast_into_narrower_uint.compact  cast_into_wider_uint_ok.compact  generic_args_on_nongeneric.compact  generic_type_missing_args.compact  generic_type_nested_ok.compact  generic_type_ok.compact  generic_type_wrong_count.compact  illegal_cast_bool_to_bytes.compact  ledger_arg_mismatch.compact  ledger_arg_ok.compact  ledger_decrement_mismatch.compact  ledger_generic_method_ok.compact  nested_seq_ok.compact  nom_bad_field.compact  nom_const_flow_mismatch.compact  nom_enum_value_ok.compact  nom_field_access_mismatch.compact  nom_field_access_ok.compact  nom_nested_field_ok.compact  nongeneric_type_ok.compact  sig_arg_count_mismatch.compact  sig_arg_ok.compact  sig_arg_tuple_ok.compact  sig_arg_type_mismatch.compact  sig_distinct_params_ok.compact  sig_dup_param_circuit.compact  sig_dup_param_witness.compact  sig_generic_module_body_ok.compact  sig_overload_ok.compact  tuple_arity_mismatch.compact  tuple_covariant_ok.compact  tuple_elem_mismatch.compact  uint_bitwidth_max_ok.compact  uint_bitwidth_over.compact  (+9 more)
crates/compact-analyzer/tests/support/: mod.rs
docs/: disclosure-advisories.md  dogfood-checklist.md  editors.md
docs/superpowers/plans/: 2026-07-06-m1-core-lsp-diagnostics.md  2026-07-14-v2b-type-system.md  (+28 more)
editors/vscode/: .gitignore  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  README.md  THIRD-PARTY-NOTICES.md  esbuild.mjs  eslint.config.mjs  package-lock.json  package.json  server-manifest.json  tsconfig.json  vitest.config.ts
scripts/: gen-server-manifest.mjs
(+36 files in other folders)
