[workspace]
resolver = "3"
members = ["crates/analyzer-core", "crates/compact-analyzer"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/devrelaicom/compact-analyzer"

[workspace.dependencies]
# syntax layer (compactp)
compactp_parser = "0.1.0-beta.1"
compactp_syntax = "0.1.0-beta.1"
compactp_diagnostics = "0.1.0-beta.1"
rowan = "0.16"
text-size = "1"

# LSP
lsp-server = "0.8"
lsp-types = "0.95.1"

# plumbing
anyhow = "1"
crossbeam-channel = "0.5"
serde_json = "1"

# dev
tempfile = "3"

# internal
analyzer-core = { path = "crates/analyzer-core" }
