[package]
name = "analyzer-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
compactp_parser.workspace = true
compactp_diagnostics.workspace = true
rowan.workspace = true
text-size.workspace = true

[dev-dependencies]
compactp_syntax.workspace = true
tempfile.workspace = true
