[package]
name = "analyzer-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
compactp_ast.workspace = true
compactp_parser.workspace = true
compactp_syntax.workspace = true
compactp_diagnostics.workspace = true
rowan.workspace = true
text-size.workspace = true

[dev-dependencies]
tempfile.workspace = true
