[package]
name = "compact-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "compact-analyzer"
path = "src/main.rs"

[dependencies]
analyzer-core.workspace = true
analyzer-ide.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
