[package]
name = "compact-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "compact-analyzer"
path = "src/main.rs"

# cargo-dist discovers distable packages by their binaries, but `publish = false`
# hides this crate from that search. Opting in explicitly restores it as the sole
# dist app without publishing anything to crates.io.
[package.metadata.dist]
dist = true

[dependencies]
analyzer-core.workspace = true
analyzer-ide.workspace = true
analyzer-toolchain.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
# Runtime dep: the compile-on-save worker uses `tempfile::tempdir()` for the
# compiler's scratch directory (also used by the integration tests).
tempfile.workspace = true
